--- a/src/components/buttons/button/button.module.scss
+++ b/src/components/buttons/button/button.module.scss
@@ -38,7 +38,8 @@
 
   @include common.mediaquery('desktop') {
     &:hover {
-      color: var(--color-button-text)
+      color: var(--color-always-black);
+      box-shadow: none;
     }
 
   }
