--- a/src/components/chat-message/chat-message.module.scss
+++ b/src/components/chat-message/chat-message.module.scss
@@ -16,7 +16,7 @@
 
 .text {
     background-color: var(--color-accent);
-    color: var(--color-button-text);
+    color: var(--color-always-black);
     border-radius: var(--radius-medium);
     padding: 0.5rem 1rem;
     max-width: 40ch;
