--- a/src/components/modals/confirmation-dialog/confirmation-dialog.module.scss
+++ b/src/components/modals/confirmation-dialog/confirmation-dialog.module.scss
@@ -6,14 +6,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   width: clamp(20rem, 80vw, 30rem);
-  padding: 1rem 1.5rem;
-
-
-  @include common.mediaquery('desktop') {
-    gap: 1.5rem;
-  }
+  padding: 1.5rem;
 }
 
 .headingContainer {
@@ -24,20 +18,22 @@
   width: 100%;
 }
 
-
 .heading {
   text-align: center;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.text {
+  margin-top: 1rem;
+  margin-bottom: 1.25rem;
+  color: var(--color-text-gray);
 }
 
 .buttonsRow {
   display: flex;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   gap: 1.5rem;
   justify-content: flex-end;
   align-items: center;
-
-  @include common.mediaquery('desktop') {
-    margin-top: 1.75rem;
-  }
 }
