--- a/src/components/pages/register-sign-in/register-sign-in.module.scss
+++ b/src/components/pages/register-sign-in/register-sign-in.module.scss
@@ -10,7 +10,7 @@
     background-color: var(--color-secondary);
     padding: 2.5rem 3rem;
     border-radius: var(--radius-big);
-    box-shadow: var(--shadow-border-small);
+    box-shadow: var(--shadow-border);
   }
 }
 
