--- a/src/components/tooltip-content/tooltip-content.module.scss
+++ b/src/components/tooltip-content/tooltip-content.module.scss
@@ -1,7 +1,7 @@
 .tooltipContent {
     z-index: 3;
     background-color: var(--color-primary);
-    box-shadow: var(--shadow-border-small);
+    box-shadow: var(--shadow-border);
     border-radius: var(--radius-small);
     padding: 0.5rem;
 }
