--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,18 +4,19 @@
   --color-primary: rgb(255, 255, 255);
   --color-secondary: rgb(246 247 249);
   --color-accent: rgb(109, 194, 171);
+  --color-always-black: rgb(22, 22, 22);
+  --color-always-white: rgb(255, 255, 255);
+
   --color-active: rgb(195, 195, 195);
   --color-error: rgb(207, 60, 30);
   --color-error-light: rgb(245, 157, 157);
   --color-error-light-active: rgb(231, 114, 114);
   --color-gray: rgb(222, 222, 222);
   --color-gray-hover: rgb(200, 200, 200);
-  --color-overlay: rgba(200, 200, 200, 0.7);
+  --color-overlay: rgba(100, 100, 100, 0.7);
 
   --color-text: rgb(6, 20, 16);
   --color-text-gray: rgb(80, 80, 80);
-
-  --color-button-text: rgb(22, 22, 22);
 
   --transition: 0.25s ease-in-out;
   --transition-fast: 0.125s ease-in-out;
@@ -28,22 +29,24 @@
   --shadow-5: rgba(0, 0, 0, 0.5);
   --shadow-8: rgba(0, 0, 0, 0.8);
 
-  --shadow-border-small: 0 0 0 1px var(--shadow-0-1), 0px 1px 2px rgb(0, 0, 0, 0.16);
+  --shadow-border: inset 0 0 0.5px 1px rgba(255, 255, 255, 0.075),
+    0 0 0 1px rgba(0, 0, 0, 0.05),
+    0 0.3px 0.4px rgba(0, 0, 0, 0.02),
+    0 0.9px 1.5px rgba(0, 0, 0, 0.045),
+    0 3.5px 6px rgba(0, 0, 0, 0.09);
 
-  --radius-big: 0.9rem;
-  --radius-medium: 0.7rem;
-  --radius-small: 0.375rem;
+  --radius-big: 0.75rem;
+  --radius-medium: 0.375rem;
+  --radius-small: 0.25rem;
 
   --header-width: calc(10rem + 10vw);
   --post-width: clamp(16rem, 85vw, 22rem);
-  --post-margin: 1rem;
 
   @include common.mediaquery('tablet') {
     --post-width: calc(18rem + 15vw);
   }
 
   @include common.mediaquery('desktop') {
-    --post-margin: 1.5rem;
     --post-width: calc(25rem + 15vw);
   }
 }
@@ -54,7 +57,7 @@
   --color-gray: rgb(100, 100, 100);
   --color-active: rgb(173, 173, 173);
   --color-gray-hover: rgb(130, 130, 130);
-  --color-overlay: rgba(80, 80, 80, 0.85);
+  --color-overlay: rgba(80, 80, 80, 0.9);
 
   --color-error: rgb(221, 91, 65);
   --color-error-light: rgba(194, 83, 83, 0.3);
