--- a/src/components/account-stats-bar/account-stats-bar.module.scss
+++ b/src/components/account-stats-bar/account-stats-bar.module.scss
@@ -9,7 +9,7 @@
   border-radius: var(--radius-medium);
   padding: 0.5rem;
   width: clamp(20rem, 80vw, 40rem);
-  box-shadow: 0px 4px 8px var(--shadow-1);
+  box-shadow: var(--shadow-border);
 
   @include common.mediaquery('tablet') {
     margin: 0;
