--- a/src/components/buttons/modal-close-button/modal-close-button.module.scss
+++ b/src/components/buttons/modal-close-button/modal-close-button.module.scss
@@ -2,18 +2,17 @@
 
 .closeButton {
   border: none;
-  transition: all var(--transition-fast);
+  transition: all var(--transition);
   transition-property: background-color, box-shadow, color;
   position: relative;
   border-radius: 100%;
   padding: 0.5rem;
   background-color: var(--color-gray);
 
-
   @include common.mediaquery('desktop') {
     &:focus {
       outline: 0;
-      box-shadow: inset 0 0 0 3px var(--color-primary), 0 0 0 4px var(--color-accent);
+      box-shadow: inset 0 0 0 4px var(--color-primary), 0 0 0 2px var(--color-accent);
     }
 
     &:hover {
@@ -28,7 +27,8 @@
 
   @include common.mediaquery('desktop') {
     &:hover {
-      background-color: var(--color-text);
+      background-color: var(--color-secondary);
+      color: var(--color-text);
     }
   }
 }
