--- a/src/components/dropdown/dropdown-content/dropdown-content.module.scss
+++ b/src/components/dropdown/dropdown-content/dropdown-content.module.scss
@@ -4,7 +4,7 @@
     padding: 0.5rem;
     border-radius: calc(var(--radius-small) + var(--padding));
     background-color: var(--color-secondary);
-    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, .16));
+    box-shadow: var(--shadow-border);
 }
 
 .arrow {
