--- a/src/components/new-post-notification/new-post-notification.module.scss
+++ b/src/components/new-post-notification/new-post-notification.module.scss
@@ -11,7 +11,7 @@
   border: none;
   border-radius: var(--radius-small);
   background-color: var(--color-accent);
-  color: var(--color-button-text);
+  color: var(--color-always-black);
   padding: 0.5rem 0.7rem;
   font-size: 1.25rem;
   display: flex;
