--- a/src/components/post/post-images-carousel/post-images-carousel.module.scss
+++ b/src/components/post/post-images-carousel/post-images-carousel.module.scss
@@ -39,6 +39,6 @@
   text-align: center;
   padding: 0.25rem 0;
   background-color: var(--color-primary);
-  box-shadow: var(--shadow-border-small);
+  box-shadow: var(--shadow-border);
   border-radius: var(--radius-small);
 }
