--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -24,7 +24,7 @@
 @mixin button {
   border-radius: var(--radius-small);
   background-color: var(--color-accent);
-  color: var(--color-button-text);
+  color: var(--color-always-black);
   font-weight: 500;
   padding: 0.4rem 0.8rem;
   display: flex;
