--- a/src/components/chat-users-list/chat-users-list.module.scss
+++ b/src/components/chat-users-list/chat-users-list.module.scss
@@ -55,7 +55,7 @@
 
     &:focus {
       outline: none;
-      box-shadow: var(--shadow-focus);
+      box-shadow: var(--shadow-border);
     }
 
   }
