--- a/src/components/post/post-modal/post-modal.module.scss
+++ b/src/components/post/post-modal/post-modal.module.scss
@@ -9,15 +9,15 @@
   bottom: 0;
   top: 0;
   border-radius: var(--radius-medium);
-  padding: 1rem 1rem;
   box-shadow: var(--shadow-border);
+  --padding: 1rem;
+  padding: var(--padding);
 
   @include common.mobile-landscape {
     width: auto;
   }
 
   @include common.mediaquery('tablet') {
-    padding: 1rem;
     width: min(80vw, 45rem);
     border-radius: var(--radius-medium);
   }
@@ -28,13 +28,15 @@
 }
 
 .desktop {
+  --header-size: 3.5rem;
+  --footer-size: 9rem;
+  --comments-section-size: 55vh;
   display: grid;
   grid-template-columns: 3fr 2fr;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: var(--header-size) var(--comments-section-size) var(--footer-size);
   align-items: flex-start;
   column-gap: 2rem;
   width: 100%;
-  height: 80vh;
 }
 
 .closeButton {
@@ -78,7 +80,6 @@
   padding-right: 1rem;
 }
 
-
 .commentsContainer {
   margin-top: 1rem;
 
@@ -100,9 +101,8 @@
 
 .commentsDesktop {
   grid-column: 2 / 3;
-  height: 100%;
-  max-height: 60vh;
   padding: 1rem 0;
+  height: 100%;
 }
 
 .commentForm {
