--- a/src/components/account-stats-bar/account-stats-bar.module.scss
+++ b/src/components/account-stats-bar/account-stats-bar.module.scss
@@ -18,6 +18,10 @@
     align-items: center;
     justify-content: space-evenly;
     padding: 0.75rem 1.5rem;
+    width: clamp(30rem, 50vw, 40rem);
+  }
+
+  @include common.mediaquery('desktop') {
     width: clamp(25rem, 34vw, 34rem);
   }
 }
