--- a/src/components/post/post-image/post-image.module.scss
+++ b/src/components/post/post-image/post-image.module.scss
@@ -20,12 +20,24 @@
   pointer-events: none;
   user-select: none;
   border-radius: var(--radius-small);
-  height: auto;
-  width: 100%;
-  object-fit: contain;
-  max-height: 70vh;
+  object-fit: cover;
+  box-shadow: 0 1px 2px var(--shadow-1);
+}
 
-  @include common.mediaquery('tablet') {
-    object-fit: contain;
-  }
+.square {
+  aspect-ratio: 1 / 1;
+  width: 100%;
+  height: 100%;
+}
+
+.landscape {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1.91 / 1;
+}
+
+.portrait {
+  height: 100%;
+  width: auto;
+  aspect-ratio: 4 / 5;
 }
