--- a/src/components/post/post-images-carousel/post-images-carousel.module.scss
+++ b/src/components/post/post-images-carousel/post-images-carousel.module.scss
@@ -4,15 +4,22 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-  flex-shrink: 0;
+  height: 100%;
 }
 
 .imagesContainer {
   position: relative;
   display: flex;
-  --gap: 2rem;
+  align-items: center;
+  --gap: 1.5rem;
+  padding: 5px;
   gap: var(--gap);
   width: 100%;
+  height: 100%;
+}
+
+.draggable {
+  height: 100%;
 }
 
 .grab {
@@ -27,8 +34,10 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 100%;
   align-items: center;
   flex-shrink: 0;
+  flex-grow: 1;
 }
 
 .progress {
