--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,15 +4,16 @@
   --color-primary: rgb(255, 255, 255);
   --color-secondary: rgb(246 247 249);
   --color-accent: rgb(109, 194, 171);
+  --color-accent-active: rgb(121, 206, 183);
   --color-always-black: rgb(22, 22, 22);
   --color-always-white: rgb(255, 255, 255);
 
-  --color-active: rgb(195, 195, 195);
+  --color-active: rgb(242, 242, 242);
   --color-error: rgb(207, 60, 30);
   --color-error-light: rgb(245, 157, 157);
   --color-error-light-active: rgb(231, 114, 114);
   --color-gray: rgb(222, 222, 222);
-  --color-gray-hover: rgb(200, 200, 200);
+  --color-gray-active: rgb(242, 242, 242);
   --color-overlay: rgba(100, 100, 100, 0.7);
 
   --color-text: rgb(6, 20, 16);
@@ -54,14 +55,14 @@
 %variablesDarkTheme {
   --color-primary: rgb(35 39 47);
   --color-secondary: rgb(52 58 70);
-  --color-gray: rgb(100, 100, 100);
-  --color-active: rgb(173, 173, 173);
-  --color-gray-hover: rgb(130, 130, 130);
   --color-overlay: rgba(80, 80, 80, 0.9);
 
   --color-error: rgb(221, 91, 65);
   --color-error-light: rgba(194, 83, 83, 0.3);
   --color-error-light-active: rgba(194, 83, 83, 0.5);
+
+  --color-gray: rgb(190, 190, 190, 0.3);
+  --color-gray-active: rgba(78, 78, 78, 0.8);
 
   --color-text: rgb(232, 232, 232);
   --color-text-gray: rgb(211, 211, 211);
