--- a/src/components/post/post-image/post-image.module.scss
+++ b/src/components/post/post-image/post-image.module.scss
@@ -22,6 +22,8 @@
   border-radius: var(--radius-small);
   object-fit: cover;
   box-shadow: 0 1px 2px var(--shadow-1);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .square {
