--- a/src/components/post/post-images-carousel/post-images-carousel.module.scss
+++ b/src/components/post/post-images-carousel/post-images-carousel.module.scss
@@ -12,7 +12,6 @@
   display: flex;
   align-items: center;
   --gap: 1.5rem;
-  padding: 5px;
   gap: var(--gap);
   width: 100%;
   height: 100%;
@@ -38,6 +37,8 @@
   align-items: center;
   flex-shrink: 0;
   flex-grow: 1;
+  --padding: 5px;
+  padding: var(--padding);
 }
 
 .progress {
