--- a/src/components/avatar/avatar.module.scss
+++ b/src/components/avatar/avatar.module.scss
@@ -8,16 +8,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  vertical-align: middle;
+  position: relative;
   overflow: hidden;
   flex-shrink: 0;
-  background-color: var(--color-secondary);
-  filter: drop-shadow(0px 0px 3px var(--shadow-1));
+  z-index: 0;
+  box-sizing: border-box;
 
 
   img {
+    background-color: var(--color-secondary);
+    object-fit: cover;
+    display: flex;
     width: 100%;
     height: 100%;
   }
+}
+
+.bordered {
+  --ring-size: 3px;
+  box-shadow: 0 0 0 var(--ring-size) var(--color-primary), 0 0 0 calc(2px + var(--ring-size)) var(--color-gray);
 }
 
 .xs {
@@ -46,10 +56,10 @@
 
 .big {
   --avatar-size: 5rem;
-  filter: drop-shadow(0px 0px 5px var(--shadow-1));
+  --ring-size: 5px;
 
   @include common.mediaquery('desktop') {
-    --avatar-size: 11rem;
+    --avatar-size: 10rem;
   }
 }
 
@@ -59,37 +69,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--color-secondary);
 }
 
 .imagePlaceholder {
-  width: 70%;
+  width: 60%;
+  margin: auto;
   height: auto;
-
-}
-
-.imagePlaceholderAnimation {
-  @extend .imagePlaceholder;
-  color: var(--color-gray);
-
-  animation: animate-placeholder 10s infinite;
-}
-
-@keyframes animate-placeholder {
-  10% {
-    color: var(--color-gray);
-  }
-
-  25%,
-  75% {
-    color: var(--color-text);
-  }
-
-  50% {
-    color: var(--color-gray);
-  }
-
-  90% {
-    color: var(--color-gray);
-
-  }
 }
