--- a/src/components/buttons/button/button.module.scss
+++ b/src/components/buttons/button/button.module.scss
@@ -16,7 +16,7 @@
 
     &:focus {
       outline: none;
-      box-shadow: inset 0 0 0 3px var(--color-primary), 0 0 0 2px var(--color-accent);
+      box-shadow: 0 0 0 2px var(--color-primary), 0 0 0 4px var(--color-accent);
     }
 
     &:hover:disabled {
