--- a/src/components/modals/followers-friends-modal/followers-friends-modal.module.scss
+++ b/src/components/modals/followers-friends-modal/followers-friends-modal.module.scss
@@ -18,7 +18,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .heading {
@@ -29,7 +29,6 @@
   display: flex;
   flex-direction: column;
   list-style: none;
-  min-height: 4rem;
   max-height: 20rem;
   overflow-y: auto;
 }
@@ -41,8 +40,8 @@
 
 .placeholder {
   margin: 0.5rem 1.5rem;
-  background-image: var(--gradient);
-  animation: var(--placeholder-animation);
+  background-color: var(--color-secondary);
+  animation: var(--skeleton-animation);
   min-height: 2.5rem;
   border-radius: var(--radius-small);
 }
