--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -20,22 +20,26 @@
   @include common.mediaquery('tablet') {
     padding: 0.5rem;
   }
-}
 
-.navbarDesktop {
-  background-color: var(--color-secondary);
-  padding: 1rem;
-  flex: 0 0 20rem;
-  --gap-top: 3rem;
-  height: calc(100vh - calc(var(--gap-top) * 2));
-  overflow: auto;
-  top: var(--gap-top);
-  position: sticky;
-  box-shadow: var(--shadow-border);
-  border-radius: calc(var(--radius-medium) + 0.5rem);
-  margin-left: 6rem;
-  display: flex;
-  flex-direction: column;
+
+  @include common.mediaquery('desktop') {
+    background-color: var(--color-secondary);
+    padding: 1rem;
+    flex: 0 0 20rem;
+    gap: 0;
+    --gap-top: 3rem;
+    height: calc(100vh - calc(var(--gap-top) * 2));
+    overflow: auto;
+    top: var(--gap-top);
+    position: sticky;
+    text-align: left;
+    align-items: flex-start;
+    box-shadow: var(--shadow-border);
+    border-radius: calc(var(--radius-medium) + 0.5rem);
+    margin-left: 6rem;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .heading {
@@ -43,6 +47,11 @@
   margin-top: 1rem;
   font-size: 2.5rem;
   margin-bottom: 2rem;
+  display: none;
+
+  @include common.mediaquery('desktop') {
+    display: block;
+  }
 }
 
 .signedInInfo {
