--- a/src/components/pages/chat-room/chat-room.module.scss
+++ b/src/components/pages/chat-room/chat-room.module.scss
@@ -14,8 +14,8 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 1.5rem;
+  justify-content: flex-start;
+  gap: 2rem;
   background-color: var(--color-primary);
   width: var(--width);
   top: 0;
@@ -45,18 +45,14 @@
 
 .userHeader {
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem 1rem;
   border-radius: var(--radius-medium);
   transition: background-color var(--transition-fast);
 
-  @include common.mediaquery('tablet') {
-    gap: 1rem;
-  }
-
   @include common.mediaquery('desktop') {
+    padding: 0.5rem 1rem;
 
     &:hover,
     &:focus {
@@ -86,11 +82,11 @@
   width: 100%;
   gap: 1rem;
   max-height: 15rem;
+  padding-top: 0.5rem;
 
   @include common.mediaquery('tablet') {
     gap: 2rem;
-    background-color: var(--color-secondary);
-    border-radius: var(--radius-medium);
     padding: 0.25rem;
+    margin-top: 1rem;
   }
 }
