--- a/src/components/pages/edit-account/edit-account.module.scss
+++ b/src/components/pages/edit-account/edit-account.module.scss
@@ -42,6 +42,7 @@
   z-index: 1;
   padding: 0.5rem;
   border-radius: var(--radius-medium);
+  color: var(--color-always-white);
   background-color: rgb(0 0 0 / 0.6);
 
   @include common.mediaquery('desktop') {
