--- a/src/components/new-post-notification/new-post-notification.module.scss
+++ b/src/components/new-post-notification/new-post-notification.module.scss
@@ -4,18 +4,17 @@
   position: fixed;
   left: 0;
   right: 0;
+  top: 2rem;
   margin: 0 auto;
   width: max-content;
   z-index: 3;
-  top: 1rem;
   border: none;
   border-radius: var(--radius-small);
+  box-shadow: 0 0 3px 1px var(--shadow-2);
   background-color: var(--color-accent);
   color: var(--color-always-black);
   padding: 0.5rem 0.7rem;
-  font-size: 1.25rem;
   display: flex;
-  gap: 0.2rem;
+  gap: 0.5rem;
   align-items: center;
-  font-weight: 500;
 }
