--- a/src/components/account-stats-bar/account-stats-bar.module.scss
+++ b/src/components/account-stats-bar/account-stats-bar.module.scss
@@ -7,9 +7,9 @@
   grid-template-columns: repeat(3, 1fr);
   background-color: var(--color-secondary);
   border-radius: var(--radius-medium);
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   width: clamp(20rem, 80vw, 40rem);
-  box-shadow: var(--shadow-border);
+  border: 1px solid var(--color-gray);
 
   @include common.mediaquery('tablet') {
     margin: 0;
@@ -27,9 +27,6 @@
 }
 
 .listItem {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-grow: 1;
 
   @include common.mediaquery('desktop') {
@@ -47,24 +44,32 @@
 }
 
 .listItemText {
-  color: var(--text-secondary);
+  color: var(--color-text-gray);
+  font-size: 0.75rem;
 
   &::first-letter {
     text-transform: uppercase;
   }
 
   @include common.mediaquery('desktop') {
+    font-size: 1rem;
+    color: var(--color-text);
     text-align: left;
   }
 }
 
 .button {
   display: flex;
+  align-items: center;
   flex-direction: column;
   text-align: center;
+  width: 100%;
+  height: 100%;
 
   @include common.mediaquery('desktop') {
     text-align: left;
+    width: auto;
+    margin: 0 auto;
     gap: 0.5rem;
     flex-direction: row;
   }
