--- a/src/components/avatar/avatar.module.scss
+++ b/src/components/avatar/avatar.module.scss
@@ -5,6 +5,8 @@
   width: var(--avatar-size);
   height: var(--avatar-size);
   border-radius: 100%;
+  --border-size: 2px;
+  padding: var(--border-size);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,6 +17,17 @@
   z-index: 0;
   box-sizing: border-box;
 
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    border-radius: 999px;
+    background-image: linear-gradient(135deg, var(--color-accent), var(--color-accent-darker));
+  }
 
   img {
     background-color: var(--color-secondary);
@@ -22,27 +35,15 @@
     display: flex;
     width: 100%;
     height: 100%;
-  }
-}
-
-.bordered {
-  --ring-size: 3px;
-  box-shadow: 0 0 0 var(--ring-size) var(--color-primary), 0 0 0 calc(2px + var(--ring-size)) var(--color-gray);
-}
-
-.xs {
-  --avatar-size: 2rem;
-
-  @include common.mediaquery('desktop') {
-    --avatar-size: 2.5rem;
+    border-radius: 999px;
   }
 }
 
 .small {
-  --avatar-size: 2.75rem;
+  --avatar-size: 2.2rem;
 
   @include common.mediaquery('desktop') {
-    --avatar-size: 3rem;
+    --avatar-size: 2.5rem;
   }
 }
 
@@ -67,6 +68,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  border-radius: 100%;
   justify-content: center;
   align-items: center;
   background-color: var(--color-secondary);
