--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   position: relative;
   gap: 0.5rem;
-  --gap: 0.75rem;
+  --gap: 0.7rem;
 }
 
 .containerError {
@@ -20,19 +20,14 @@
   transition: all var(--transition);
   transition-property: background-color, transform, opacity;
   display: inline-block;
-  opacity: 0.8;
-}
-
-%label-active {
-  opacity: 1;
-  transform: translate(0.5rem, -0.75rem);
+  font-size: 0.8rem;
 }
 
 .input {
   background-color: var(--color-secondary);
-  padding: 2rem var(--gap) 0.75rem var(--gap);
+  padding: 1.5rem var(--gap) 0.75rem var(--gap);
   border-radius: var(--radius-small);
-  border: none;
+  border: 1px solid var(--color-gray);
   color: var(--color-text);
 
   &:focus {
