--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -21,7 +21,6 @@
     padding: 0.5rem;
   }
 
-
   @include common.mediaquery('desktop') {
     background-color: var(--color-secondary);
     padding: 1rem;
@@ -36,21 +35,27 @@
     align-items: flex-start;
     box-shadow: var(--shadow-border);
     border-radius: calc(var(--radius-medium) + 0.5rem);
-    margin-left: 6rem;
+    margin-left: 3vw;
     display: flex;
     flex-direction: column;
   }
 }
 
 .heading {
-  margin-left: 0.75rem;
-  margin-top: 1rem;
-  font-size: 2.5rem;
-  margin-bottom: 2rem;
   display: none;
 
   @include common.mediaquery('desktop') {
+    margin-left: 0.75rem;
+    margin-top: 1rem;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    font-weight: 900;
     display: block;
+
+    background: linear-gradient(135deg, var(--color-accent), var(--color-accent-darker));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
 
