--- a/src/components/other-sign-in-options/other-sign-in-options.module.scss
+++ b/src/components/other-sign-in-options/other-sign-in-options.module.scss
@@ -21,17 +21,12 @@
     content: '';
     width: 100%;
     height: 2px;
-    background-color: var(--color-secondary);
+    background-color: var(--color-gray);
     position: absolute;
     top: 50%;
     left: 0;
   }
 
-  @include common.mediaquery('desktop') {
-    &::before {
-      background-color: var(--color-primary);
-    }
-  }
 }
 
 .otherOptions {
@@ -42,8 +37,13 @@
 
 .other {
   display: flex;
+  width: fit-content;
+  margin: 0 auto;
   justify-content: center;
-  align-items: stretch;
   flex-direction: column;
   gap: 2rem;
+
+  @include common.mediaquery('desktop') {
+    flex-direction: row;
+  }
 }
