--- a/src/components/textarea/text-area.module.scss
+++ b/src/components/textarea/text-area.module.scss
@@ -22,7 +22,8 @@
   position: absolute;
   background-color: var(--color-secondary);
   left: var(--gap);
-  top: 0rem;
+  top: 2px;
+  font-size: 0.8rem;
   padding-top: 0.5rem;
   display: inline-block;
   width: calc(100% - 1rem);
@@ -31,21 +32,21 @@
 }
 
 .textArea {
-  border: none;
   min-width: 100%;
   width: 100%;
   height: 100%;
   resize: vertical;
   height: 4.5rem;
-  max-height: 12rem;
+  max-height: 5rem;
   padding: 1rem var(--gap);
   padding-top: 2rem;
   background-color: var(--color-secondary);
   border-radius: var(--radius-small);
+  border: 1px solid var(--color-gray);
 
   &:focus {
     outline: none;
-    border-color: var(--color-primary);
+    border: 1px solid var(--color-gray);
   }
 }
 
