--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@
   --color-primary: rgb(255, 255, 255);
   --color-secondary: rgb(246 247 249);
   --color-accent: rgb(109, 194, 171);
+  --color-accent-darker: rgb(2, 189, 117);
   --color-accent-active: rgb(121, 206, 183);
   --color-always-black: rgb(22, 22, 22);
   --color-always-white: rgb(255, 255, 255);
@@ -19,7 +20,7 @@
   --color-text: rgb(6, 20, 16);
   --color-text-gray: rgb(80, 80, 80);
 
-  --transition: 0.25s ease-in-out;
+  --transition: 0.2s ease-in-out;
   --transition-fast: 0.125s ease-in-out;
 
   --skeleton-animation: skeleton 2.5s linear infinite forwards;
