--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -31,11 +31,7 @@
   --shadow-5: rgba(0, 0, 0, 0.5);
   --shadow-8: rgba(0, 0, 0, 0.8);
 
-  --shadow-border: inset 0 0 0.5px 1px rgba(255, 255, 255, 0.075),
-    0 0 0 1px rgba(0, 0, 0, 0.05),
-    0 0.3px 0.4px rgba(0, 0, 0, 0.02),
-    0 0.9px 1.5px rgba(0, 0, 0, 0.045),
-    0 3.5px 6px rgba(0, 0, 0, 0.09);
+  --shadow-border: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 
   --radius-big: 0.8rem;
   --radius-medium: 0.42rem;
