fix: navbar mobile styles

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -41,6 +41,11 @@
 }
 
 .navbarContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+
   @include common.mediaquery('desktop') {
     display: flex;
     flex-grow: 1;
