feat: more add prefetching

--- a/components/account-posts-list/account-posts-list.module.scss
+++ b/components/account-posts-list/account-posts-list.module.scss
@@ -4,19 +4,21 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: flex-start;
-  margin-top: 1rem;
+  margin: 1rem auto 0 auto;
   gap: 0.5rem;
   width: 100%;
-  padding-bottom: 1rem;
+  padding: 0 1rem 1rem 1rem;
+  max-width: 30rem;
 
   @include common.mobile-landscape {
     grid-template-columns: repeat(3, 1fr);
   }
 
   @include common.mediaquery('tablet') {
-    margin-top: 2rem;
     gap: 1rem;
-    margin-top: 3.5rem;
+    max-width: 50rem;
+    padding: 0 4rem 2rem 4rem;
+    margin: 3rem auto 0 auto;
     grid-template-columns: repeat(3, 1fr);
   }
 
