--- a/components/account-post/account-post.module.scss
+++ b/components/account-post/account-post.module.scss
@@ -8,16 +8,10 @@
   background-color: var(--color-secondary);
   border: 2px solid var(--color-gray);
   transition: box-shadow var(--transition-fast);
-  flex: 1 0 0%;
-  height: 9rem;
-
-  @include common.mediaquery('tablet') {
-    height: 11rem;
-  }
+  aspect-ratio: 1;
+  height: 100%;
 
   @include common.mediaquery('desktop') {
-    height: 15rem;
-
     &:focus {
       & > .overlay {
         opacity: 1;
@@ -45,11 +39,10 @@
 
 .manyPhotosIcon {
   position: absolute;
-  right: 0;
+  right: 0.5rem;
   top: 0.5rem;
+  opacity: 0.8;
   z-index: 1;
-  width: 2rem;
-  height: 2rem;
   color: var(--color-always-white);
 }
 
