--- a/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -14,7 +14,9 @@
     align-items: flex-start;
     border: initial;
     width: 100%;
-    padding: 0;
+    height: auto;
+    overflow-y: auto;
+    padding: 2rem 0;
     gap: 2rem;
     margin-bottom: auto;
     box-shadow: none;
