--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -15,6 +15,7 @@
   z-index: 3;
   border-radius: var(--radius-medium);
   box-shadow: var(--shadow);
+  border: 1px solid var(--shadow-0-5);
   background-color: var(--color-secondary);
 
   @include common.mediaquery('tablet') {
@@ -42,7 +43,7 @@
 
 .navbarContent {
   display: flex;
-  justify-content: center;
+  justify-content: safe center;
   align-items: center;
   gap: 2rem;
 
@@ -51,7 +52,6 @@
     flex-grow: 1;
     width: 100%;
     flex-direction: column;
-
     overflow: auto;
   }
 }
@@ -63,7 +63,6 @@
     margin-left: 0.75rem;
     margin-top: 1rem;
     font-size: 2.5rem;
-    margin-bottom: 2rem;
     text-transform: uppercase;
     font-weight: 900;
     display: block;
