--- a/components/buttons/modal-close-button/modal-close-button.module.scss
+++ b/components/buttons/modal-close-button/modal-close-button.module.scss
@@ -8,17 +8,13 @@
   border-radius: 100%;
   padding: 0.5rem;
   background-color: var(--color-gray);
+  border: 1px solid transparent;
 
   @include common.mediaquery('desktop') {
-    &:focus {
-      outline: 0;
-      box-shadow:
-        0 0 0 4px var(--color-primary),
-        0 0 0 6px var(--color-accent);
-    }
-
     &:hover {
-      background-color: var(--color-gray-hover);
+      background-color: var(--color-accent);
+      color: var(--color-primary);
+      border-color: var(--shadow-0-5);
     }
   }
 }
