--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -80,7 +80,7 @@
 .signedInInfo {
   margin: 0;
   position: relative;
-  padding: 1rem;
+  padding: 0.6rem 0.75rem;
   background-color: var(--color-primary);
   border-radius: var(--radius-medium);
   display: flex;
@@ -104,7 +104,7 @@
   text-align: left;
 }
 
-.name {
+.username {
   max-width: 12ch;
   font-weight: 700;
   overflow: hidden;
@@ -118,8 +118,8 @@
   margin-left: auto;
 }
 
-.username {
-  max-width: 8ch;
+.name {
+  max-width: 14ch;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
