--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,7 +2,7 @@
 
 %variables {
   --color-primary: rgb(255, 255, 255);
-  --color-secondary: rgb(246 247 249);
+  --color-secondary: rgb(245, 245, 245);
   --color-accent: rgb(109, 194, 171);
   --color-accent-darker: rgb(2, 189, 117);
   --color-accent-active: rgb(121, 206, 183);
