--- a/apps/frontend/components/post/post-images-carousel/post-images-carousel.module.scss
+++ b/apps/frontend/components/post/post-images-carousel/post-images-carousel.module.scss
@@ -15,6 +15,11 @@
   gap: var(--gap);
   width: 100%;
   height: 100%;
+
+  transition: transform 250ms ease-in-out;
+  transform: translateX(
+    calc(calc(-1 * var(--width) - var(--gap)) * var(--currentImage))
+  );
 }
 
 .draggable {
