--- a/apps/frontend/components/modals/list-modal/list-modal.module.scss
+++ b/apps/frontend/components/modals/list-modal/list-modal.module.scss
@@ -10,6 +10,7 @@
   width: clamp(20rem, 80vw, 40rem);
   padding: 1rem 1.5rem;
   border-radius: var(--radius-medium);
+  animation: show-modal 300ms cubic-bezier(0, 1.4, 1, 1) forwards;
 
   @include common.mediaquery("desktop") {
     width: clamp(25rem, 40vw, 35rem);
@@ -42,4 +43,15 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+@keyframes show-modal {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
