--- a/apps/frontend/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/apps/frontend/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -15,7 +15,7 @@
     border: initial;
     width: 100%;
     height: auto;
-    overflow-y: auto;
+    overflow-y: clip;
     padding: 2rem 0;
     gap: 2rem;
     margin-bottom: auto;
@@ -24,45 +24,27 @@
 }
 
 .listItem {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-
-  @include common.mediaquery("desktop") {
-    width: 100%;
-    padding: 0;
-    display: block;
-
-    &:active {
-      & > .listItemContent {
-        transform: scale(0.95);
-        opacity: 0.9;
-
-        & > .icon {
-          transform: scale(0.95);
-        }
-      }
-    }
-  }
+  width: 100%;
 }
 
 .listItemContent {
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: var(--radius-medium);
   gap: 1rem;
-  border: 1px solid transparent;
   padding: 0.5rem;
+  border-radius: var(--radius-medium);
+  transition: all var(--transition-fast);
   font-size: 1.25rem;
-  transition: all var(--transition) ease-in-out;
+  transition-property: transform, background-color, border-color;
+  border: 1px solid transparent;
 
   @include common.mediaquery("desktop") {
-    justify-content: flex-start;
-    padding: 1rem 0.75rem;
-    width: 100%;
-    height: auto;
+    padding: 1rem;
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: var(--color-primary);
+    }
   }
 }
 
@@ -72,16 +54,12 @@
 
 .active {
   background-color: var(--color-primary);
-  border: 1px solid var(--shadow-0-5);
+  border-color: var(--shadow-0-5);
   box-shadow: var(--shadow);
 
   @include common.mediaquery("desktop") {
     background-color: var(--color-primary);
     font-weight: 700;
-
-    & > .icon {
-      transform: scale(1.1);
-    }
   }
 }
 
