--- a/apps/frontend/components/buttons/button-link/button-link.module.scss
+++ b/apps/frontend/components/buttons/button-link/button-link.module.scss
@@ -2,4 +2,24 @@
 
 .button {
   @include common.button;
+
+  background: linear-gradient(
+    135deg,
+    var(--color-accent),
+    var(--color-accent-darker)
+  );
+  background-size: 150% 150%;
+  background-position: 0%;
+  transition: background-position var(--transition-fast);
+  color: var(--color-always-black);
+
+  &:disabled {
+    background: var(--color-gray);
+  }
+
+  @include common.mediaquery("desktop") {
+    &:hover:not(:disabled) {
+      background-position: 100%;
+    }
+  }
 }
