--- a/apps/frontend/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/apps/frontend/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -30,6 +30,8 @@
 .listItemContent {
   width: 100%;
   display: flex;
+  align-items: center;
+  justify-items: center;
   gap: 1rem;
   padding: 0.5rem;
   border-radius: var(--radius-medium);
