--- a/apps/frontend/components/pages/register-sign-in/register-sign-in.module.scss
+++ b/apps/frontend/components/pages/register-sign-in/register-sign-in.module.scss
@@ -1,7 +1,7 @@
 @use "styles/common";
 
 .container {
-  width: clamp(20rem, 65vw, 55rem);
+  width: clamp(20rem, 55vw, 50rem);
   display: flex;
   gap: 1rem;
   flex-direction: column;
@@ -19,4 +19,8 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
+  @include common.mediaquery("desktop") {
+    gap: 4rem;
+  }
 }
