feat(animations): navbar

--- a/apps/frontend/components/layout/layout.module.scss
+++ b/apps/frontend/components/layout/layout.module.scss
@@ -1,35 +1,32 @@
-@use "styles/common";
+@use 'styles/common';
 
 .layout {
-  padding-bottom: 4rem;
+	padding-bottom: 4rem;
+	min-height: 100dvh;
 
-  @include common.mediaquery("tablet") {
-    min-height: 100dvh;
-    display: flex;
-    gap: 2rem;
-  }
-
-  @include common.mediaquery("desktop") {
-    padding-bottom: 0;
-    gap: 3rem;
-  }
+	@include common.mediaquery('desktop') {
+		display: grid;
+		grid-template-columns: 1fr 3fr;
+		padding-bottom: 0;
+		gap: 3rem;
+	}
 }
 
 .container {
-  margin-top: 1rem;
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
+	margin-top: 1rem;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	flex-direction: column;
 
-  @include common.mediaquery("desktop") {
-    margin-top: 3rem;
-    margin-right: 5vw;
-    padding-bottom: 2rem;
-  }
+	@include common.mediaquery('desktop') {
+		margin-top: 3rem;
+		margin-right: 5vw;
+		margin-bottom: 2rem;
+		grid-column: 2 / 3;
+	}
 
-  @include common.mediaquery("desktop-big") {
-    margin-right: 10vw;
-  }
+	@include common.mediaquery('desktop-big') {
+		margin-right: 15vw;
+	}
 }
